# whatsapp-api-mcp-server

./: Dockerfile  README.md  smithery.yaml
whatsapp-api-mcp-server/: .env.example  Dockerfile  main.py  pyproject.toml  run.sh  smithery.yaml  test_wati_api.py  wati_api.py  whatsapp.py
whatsapp-api-mcp-server/src/whatsapp_mcp/: __init__.py  main.py  wati_api.py  whatsapp.py
whatsapp-api-mcp-server/tests/: test_wati_api.py
